# Autie

./: .gitignore
agent/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent/app/: agent.py  auth.py  main.py  ratelimit.py  sessions.py
agent/app/channels/: __init__.py  telegram.py
agent/app/safety/: crisis.py  postcheck.py
agent/app/tools/: crisis.py  employment.py  places.py  rag.py
agent/evals/: employment_eval.json  retrieval_eval.json
agent/ingestion/: chunker.py  corpus.json  corpus_goldern.json  extended_corpus.json  ingest.py
agent/scripts/: chat.sh  config.sh  deploy.sh  dev.sh  logs.sh  telegram-setup.sh
agent/tests/: test_chunker.py  test_employment.py  test_employment_evals.py  test_hardening.py  test_history.py  test_ingest_prune.py  test_places.py  test_rag_evals.py  test_safety.py  test_smoke.py  test_telegram.py
docs/: architecture.md  backlog.md  employment.md  future-integrations.md  rag-constraints.md
web/: .firebaserc  .gitignore  deploy.sh  firebase.json  package-lock.json  package.json
web/.firebase/: hosting.ZGlzdFx3ZWJcYnJvd3Nlcg.cache
web/src/: index.html  styles.css
web/src/app/: app.ts
web/src/app/chat/: chat-page.css  chat-page.html  chat-page.ts  composer.css  composer.html  composer.ts  markdown.pipe.ts  message-bubble.css  message-bubble.html  message-bubble.ts
web/src/app/core/: auth.service.ts  chat.service.ts  firebase-config.ts
