[project]
name = "autie-agent"
version = "0.1.0"
description = "Autie agent service - Python ADK on Cloud Run"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "firebase-admin>=6.5",
    "google-cloud-firestore>=2.19",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
